--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Global</title>
+  <title>PIM</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="HTML5 website template">
-  <meta name="keywords" content="global, template, html, sass, jquery">
-  <meta name="author" content="Bucky Maler">
+  <meta name="description" content="For Perfect ISMS">
+  <meta name="author" content="PIM">
   <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -16,7 +15,7 @@
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
     <img src="assets/img/logo.jpg" alt="Global">
-    <p>Global</p>
+    <p>pim</p>
   </a>
   <p class="device-notification--message">Global has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
 </div>
@@ -27,8 +26,8 @@
       <div class="l-wrapper">
         <header class="header">
           <a class="header--logo" href="#0">
-            <img src="assets/img/logo.jpg" alt="Global" style="width: 100px; height: auto;">
-            <p>Global</p>
+            <img src="assets/img/logo.jpg" alt="Global" style="width: 100px; height: auto; margin-top: 50px;">
+            <p>pim</p>
           </a>
           <!-- <button class="header--cta cta">Hire Us</button> -->
           <div class="header--nav-toggle">
